# sqs-extended-client

./: README.md  requirements.dev.txt  setup.cfg  setup.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: pythonpackage.yml
src/sqs_extended_client/: __init__.py  session.py
