[metadata]
name = sqs-extended-client
author = Joseph Wortmann
author_email = jwortmann@quinovas.com
version = 0.0.10
description = AWS SQS extended client functionality from amazon-sqs-java-extended-client-lib
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE
url = https://github.com/QuiNovas/sqs-extended-client
keywords = sqs, java
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8

[options]
package_dir =
    =src
packages = find:
include_package_data = true
install_requires = 
    botoinator
python_requires = >=3.8

[options.packages.find]
where = src
